test/errors/err3.upl
fn main
	println("hello!"
end
